--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,7 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-	themes: cupcake --default, light, dark, bumblebee, emerald,
-		corporate --prefersdark, retro, valentine, halloween, garden, forest,
-		lofi, aqua, pastel, fantasy, wireframe, black, luxury, dracula, acid,
-		lemonade, night, coffee, winter, dim, nord, sunset, caramellatte, abyss,
-		silk;
+	themes: cupcake --default, light, dark, bumblebee, emerald, corporate, retro,
+		valentine, halloween, garden, forest, lofi, aqua, pastel, fantasy,
+		wireframe, black, luxury, dracula, acid, lemonade, night, coffee, winter,
+		dim, nord --prefersdark, sunset, caramellatte, abyss, silk;
 }
